<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    
    <data>
        <variable
            name="viewModel"
            type="com.yologger.smemo.ui.screen.create.CreateViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.screen.create.CreateActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/activity_create_tb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Base_ToolbarStyle"
            android:minHeight="?attr/actionBarSize"/>

        <EditText
            android:id="@+id/activity_create_tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:padding="@dimen/padding_md"
            android:hint="@string/activity_create_et_title"
            android:text="@={viewModel.liveTitle}"
            android:maxLines="1" />

        <EditText
            android:id="@+id/activity_create_tv_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/padding_md"
            android:hint="@string/activity_create_et_content"
            android:text="@={viewModel.liveContent}"
            android:gravity="top" />

    </LinearLayout>

</layout>